Hide lightbox navigation controls on all screens

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -137,6 +137,12 @@ p {
     background-position: 100% 50%;
 }
 
+.lb-nav,
+.lb-prev,
+.lb-next {
+    display: none !important;
+}
+
 @media (max-width: 992px) {
     .navbar-nav {
         align-items: center;
