--- a/scss/custom.css
+++ b/scss/custom.css
@@ -11911,7 +11911,7 @@ p {
   height: 3rem;
   background-color: rgba(0, 0, 0, 0.4);
   border-radius: 50%;
-  padding: 0.5rem;
+  background-size: 50%;
 }
 
 .carousel-control-prev,
